<resources>
    <string name="app_name">Traffic-Light Touch Tunes</string>
    <string name="red_section">Touch a below and CHILLAX!</string>
    <string name="amber_section">Touch below and move SLOW!</string>
    <string name="green_section">Touch below- and GO! GO!</string>
    <string name="settings_section">Help- swipe then touch to close</string>
    <string name="red_activity">Touch here to CHILL!</string>
    <string name="amber_activity">Touch here for a MODERATE mix!</string>
    <string name="green_activity">Touch here for a mix to GO! GO! GO!</string>
    <string name="settings_activity">Touch here for help</string>
    <string name="PlayItSam">Music Player</string>
    <string name="NowPlaying">Now Playing... \n(Touch to stop)</string>
    <string name="Title">Title of track</string>
    <string name="Artist">Artist name</string>
    <string name="by">by</string>
    <string name="Duration">Duration</string>
    <string name="TrafficLightTunes">"Traffic Light Tunes!"</string>
    <string name="selectred">"Select RED timed tune mixes for a chillout vibe up to 15mins long."</string>
    <string name="selectgreen">"Select GREEN timed mixes for GO - a high intensity interval training up to 5mins"</string>
    <string name="selectamber">"Select AMBER timed tunes for a warm up or warm down- or maybe walking the dog!"</string>
    <string name="selectsettings">"Touch the screen to continue!  \nNOTE: Remember to consult your physician before starting new excercise"</string>
</resources>
